Changelog
---------
The UFTP issue tracker is at
https://sourceforge.net/p/unicore/uftp-issues


UFTP 2.18.0
-----------
 - implement remote copy

UFTP 2.17.0
-----------
 - update dependencies

UFTP 2.13.0
-----------
 - update dependencies

UFTP 2.12.0
-----------
 - new feature: HASH command (#70)

UFTP 2.11.0
-----------
 - update to log4j/2, logging config update recommended
 - update to securityLibrary 5.3.1
 - new feature: implement restart command ("REST")
 - fix: persistent sessions were removed even
   when still active
 - fix: handling of absolute vs relative directories, allow 
   creating sessions with a fixed base directory
 - fix: wrong format string for MFMT

Starting with UFTPD 3.0, we release the file server uftpd only in the
Python implementation. This project is still used for
providing the Java implementation of the base library used for
clients and in the Java servers.

UFTP 2.9.2 (released Nov 16 2020)
---------------------------------
 - fix: debian package now depends on "default-jre-headless"
 - fix: tgz bundle was was missing uftp.sh script

UFTP 2.9.1 (released Oct 16 2020)
---------------------------------
 - fix: FTP session starting directory was not correct in
   some cases

UFTP 2.9.0 (released Sep 21 2020)
---------------------------------
 - new feature: support for FTP proxies (DeleGate and Frox)
 - new feature: "persistent" sessions to allow mounting via
   'curlftpfs' where the login secret is re-used
   several times
 - simplify login handshake handling to better support
   login from non-UFTP clients
 - fix: stat'ing the "/" directory returned empty filename
   and thus listing "/" did not work
 - fix: client sent extra empty lines over the control
   channel
 - fix: less harsh timeouts for control socket communications
 - fix: use setresuid() for UID switching to fix problems
   with root-squash mouted file systems
 
UFTP 2.8.0 (released Jul 06 2020)
---------------------------------