@@ -12,6 +12,7 @@ import java.nio.channels.SocketChannel;
 import java.util.ArrayDeque;
 import java.util.Deque;
 import java.util.List;
+import java.util.UUID;
 
 import org.junit.Test;
 
@@ -32,21 +33,37 @@ public class TestAsync extends ClientServerTestBase{
 		File realSource=new File(realSourceName);
 		Utils.writeToFile("this is a test for the session client", realSource);
 		String target = "target/testdata/testfile-" + System.currentTimeMillis();
-		String secret = String.valueOf(System.currentTimeMillis());
+		File realSource2=new File(realSourceName+"-2");
+		Utils.writeToFile("this is a 2nd test for the session client", realSource2);
+		String target2 = target+"-2";
+		String secret = UUID.randomUUID().toString();
+		String secret2 = UUID.randomUUID().toString();
 		String cwd=new File(".").getAbsolutePath();
 		UFTPSessionRequest job = new UFTPSessionRequest(host, "nobody", secret, cwd);
 		job.sendTo(host[0], jobPort);
+		UFTPSessionRequest job2 = new UFTPSessionRequest(host, "nobody", secret2, cwd);
+		job2.sendTo(host[0], jobPort);
+
 		Thread.sleep(1000);
 		InetAddress[]server=host;
 
 		try(UFTPSessionClient client = new UFTPSessionClient(server, srvPort);
-			FileOutputStream fos = new FileOutputStream(target))
+			FileOutputStream fos = new FileOutputStream(target);
+			UFTPSessionClient client2 = new UFTPSessionClient(server, srvPort);
+			FileOutputStream fos2 = new FileOutputStream(target2))
 		{
 			client.setSecret(secret);
 			client.connect();
-			Pair<SocketChannel, Long> p = client.prepareAsyncGet(realSourceName, 0, -1);
+			client2.setSecret(secret2);
+			client2.connect();
 			AsyncDownloader ad = new AsyncDownloader();
+
+			Pair<SocketChannel, Long> p = client.prepareAsyncGet(realSourceName, 0, -1);
+			Pair<SocketChannel, Long> p2 = client2.prepareAsyncGet(realSourceName+"-2", 0, -1);
+
 			ad.add(p.getM1(), fos.getChannel(), p.getM2(), client);
+			ad.add(p2.getM1(), fos2.getChannel(), p2.getM2(), client2);
+
 			new Thread(ad, "Downloader").start();
 			while(ad.getRunningTasks()>0)Thread.sleep(1000);
 			ad.stop();
@@ -54,10 +71,10 @@ public class TestAsync extends ClientServerTestBase{
 			System.out.println(client.pwd());
 		}
 		// check that file exists and has correct content
-		String expected = Utils.md5(realSource);
-		checkFile(new File(target), expected);
+		checkFile(new File(target), Utils.md5(realSource));
+		checkFile(new File(target2), Utils.md5(realSource2));
 	}
-	
+
 	@Test
 	public void testClientWrite() throws Exception {
 		String realSourceName="target/testdata/source-"+System.currentTimeMillis();
