@@ -7,6 +7,7 @@ https://sourceforge.net/p/unicore/uftp-issues
 UFTP 2.18.0
 -----------
  - implement remote copy
+ - UFTPSessionClient checks if AES encryption is supported
 
 UFTP 2.17.0
 -----------
